--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <main class="home-page">
+            <h1 class="main-header">Commission Calculator</h1>
+            <div>
+                
+            </div>
+
+        </main>
 
         <script src="main.js"></script>
     </body>
