completion of User Interface

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <body>
         <main class="home-page">
             <h1 class="main-header">Commission Calculator</h1>
-            <div>
+            <div id="main-section">
                 
+                <input class="usrInput" type="text" placeholder="Enter Amount to Transfer" >
+                <button class="btn" type="submit" name="Enter">submit</button> 
+
             </div>
 
         </main>
