--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             <h1 class="main-header">Commission Calculator</h1>
             <div id="main-section">
                 
-                <input class="usrInput" type="text" placeholder="Enter Amount to Transfer" >
-                <button class="btn" type="submit" name="Enter">submit</button> 
+                <input id="input" class="usrInput" type="text" placeholder="Enter Amount to Transfer" value="" >
+                <button class="btn" type="submit" name="Enter" onclick="calc()">submit</button> 
+                <span id="usr-console"></span>
 
             </div>
 
