--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <main class="home-page">
-            <h1 class="main-header">Commission Calculator</h1>
+            <div class="header-container">
+                <h1 class="main-header">Commission Calculator</h1>
+            </div>
             <div id="main-section">
                 
                 <input id="input" class="usrInput" type="text" placeholder="Enter Amount to Transfer" value="" >
